frontend/tests/cases/negative/wild.gr
import Prelude
import Vec

isEmpty : ∀ {n : Nat} . Vec n Int → Bool
isEmpty Nil        = True;
isEmpty (Cons _ _) = False