frontend/tests/cases/negative/wild.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/wild.gr:6:15:
Wildcard pattern `_` allowing a value to be discarded